# firebase-web-push

./: README.md
python-send-push/: .gitignore  README.md  main.py  pyproject.toml
web-app/: package-lock.json  package.json
web-app/public/: firebase-messaging-sw.js
web-app/src/: App.css  App.tsx  firebase.ts
